--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,9 @@
         "intervention/image": "^2.7",
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^3.0",
-        "laravel/tinker": "^2.7"
+        "laravel/tinker": "^2.7",
+        "maatwebsite/excel": "^3.1",
+        "phpoffice/phpword": "dev-develop"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
