--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
         "php": "^8.0.2",
         "ext-gd": "*",
         "barryvdh/laravel-dompdf": "^2.0",
-        "guzzlehttp/guzzle": "^7.2",
+        "guzzlehttp/guzzle": "^7.5",
+        "hubspot/api-client": "^9.2",
         "intervention/image": "^2.7",
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^3.0",
